Message: Fix for SyntaxHighlighter overflow and editor contrast (#8415)
* Fix for SyntaxHighlighter overflow

* Force color contrast in the editor

--- a/message/style.css
+++ b/message/style.css
@@ -38,3 +38,16 @@ a {
 	text-decoration-thickness: .0625em !important;
 	text-underline-offset: .15em;
 }
+
+/*
+ * SyntaxHighlighter styles
+ * https://github.com/Automattic/themes/issues/8247
+ */
+.entry-content:has(.syntaxhighlighter) {
+	max-width: 100%;
+}
+
+.wp-block-syntaxhighlighter-code textarea {
+	color: black;
+	padding: .5em 1em;
+}
